styles/_layout.scss
/* 布局 */

/* 微信小程序根元素 */
page {
  @include m-position-reset();
  @include m-box-sizing-reset();
  @include m-sizing-full();
  @include m-spacing-reset();
  overflow: hidden;
  @include m-font-family-reset();
  @include m-font-size();
  @include m-font-weight();
  @include m-line-height();
}

/* 重置 box-sizing */
.bsbb {
  @include m-box-sizing-reset();
}

.db {
  @include m-display(block);
}

.container {
  @include m-position-reset();
  @include m-box-sizing-reset();
  @include m-display-reset();
  @include m-flex-axis($flex-column);
  @include m-sizing-full();

  &.light {
    color: $color-main;
    background-color: $color-white;
  }

  &.dark {
    color: $color-main-inverse;
    background-color: $color-black;
  }

  &.is-horizontal {
    flex: 1;
    @include m-flex-axis-reset();
    height: auto;

    & > .main {
      width: auto;
      height: 100%;
      @include m-spacing-padding-reset();
    }
  }

  & > .bg {
    @include m-position(fixed);
    @include m-z-index(-99);
    @include m-sizing-square(100%);
  }

  & > .header,
  & > .nav,
  & > .footer {
    @include m-position-reset();
    @include m-box-sizing-reset();
    @include m-display-reset();
    @include m-flex-axis($flex-row, $flex-center, $flex-space-between);
    width: 100%;
    @include m-background-color($color-white);

    & > .left,
    & > .right {
      @include m-box-sizing-reset();
      @include m-display-reset();
      @include m-flex-axis($flex-row, $flex-center);
      height: 100%;
      overflow: hidden;
    }

    & > .left {
      flex: $flex-auto;
      justify-content: $flex-start;
    }

    & > .right {
      flex: $flex-none;
      justify-content: $flex-end;
    }
  }

  & > .header {
    flex: 0 0 $sizing-layout-xl;
    padding: $spacing-none $spacing-lg;
    border-bottom: $border-width-default solid $border-color-default;
  }

  & > .nav {
    flex: 0 0 $sizing-layout-xs;
    padding: $spacing-none;
    overflow: hidden;
    border-bottom: $border-width-default solid $border-color-default;
  }

  & > .aside {
    @include m-position-reset();
    @include m-box-sizing-reset();
    @include m-display-reset();
    @include m-flex-axis($flex-column, $flex-center);
    width: auto;
    height: 100%;
  }

  & > .main {
    @include m-position-reset();
    @include m-box-sizing-reset();
    @include m-display-reset();
    flex: $flex-auto;
    @include m-flex-axis($flex-column);
    width: 100%;
    height: auto;
    @include m-spacing-padding($spacing-xl);
  }

  & > .footer {
    @include m-flex-axis($flex-row, $flex-start, $flex-center); // 匹配 iPhone X 系列
    flex: 0 0 $sizing-layout-xxxxl;
    padding: $spacing-xs $spacing-lg;
    border-top: $border-width-default solid $border-color-default;
  }
}

